--- a/sections/grid.liquid
+++ b/sections/grid.liquid
@@ -35,7 +35,7 @@
 
   <!-- Category Grid -->
   <div class="mt-4 grid grid-cols-2 gap-2 lg:grid-cols-4">
-    <div class="group relative overflow-hidden h-[600px]">
+    <div class="group relative overflow-hidden ">
       <img
         width="100%"
         height="100%"
@@ -46,7 +46,7 @@
       <span class="absolute bottom-4 left-1/2 -translate-x-1/2 transform text-2xl font-semibold text-white">MEN</span>
     </div>
 
-    <div class="group relative overflow-hidden h-[600px]">
+    <div class="group relative overflow-hidden ">
       <img
         width="100%"
         height="100%"
@@ -57,7 +57,7 @@
       <span class="absolute bottom-4 left-1/2 -translate-x-1/2 transform text-2xl font-semibold text-white">WOMEN</span>
     </div>
 
-    <div class="group relative overflow-hidden h-[600px]">
+    <div class="group relative overflow-hidden ">
       <img
         width="100%"
         height="100%"
@@ -70,7 +70,7 @@
       >
     </div>
 
-    <div class="group relative overflow-hidden h-[600px]">
+    <div class="group relative overflow-hidden ">
       <img
         width="100%"
         height="100%"
@@ -84,7 +84,7 @@
 
   <!-- New Arrival Grid -->
   <div class="mt-4 grid grid-cols-1 gap-4 sm:grid-cols-2">
-    <div class="group relative overflow-hidden h-[800px]">
+    <div class="group relative overflow-hidden ">
       <img
         width="100%"
         height="100%"
@@ -97,7 +97,7 @@
       >
     </div>
 
-    <div class="group relative overflow-hidden h-[800px]">
+    <div class="group relative overflow-hidden ">
       <img
         width="100%"
         height="100%"
