--- a/sections/article.liquid
+++ b/sections/article.liquid
@@ -1,9 +1,18 @@
-<section>
-  <h1>Article</h1>
+<section class="max-w-3xl mx-auto p-4 space-y-4">
+  <h1 class="text-3xl font-bold">{{ article.title }}</h1>
+
   {% if article.image %}
-    <h1>{{ article.title }}</h1>
-    <p>
-      {{ article.content | strip_html }}
-    </p>
+    <img
+      width="100%"
+      height="auto"
+      loading="lazy"
+      src="{{ article.image | image_url: width: 720 }}"
+      alt="{{ article.title }}"
+      class="w-full h-auto rounded"
+    >
   {% endif %}
+
+  <div class="prose max-w-none">
+    {{ article.content }}
+  </div>
 </section>
